name:                pagerank-hs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/magnap/pagerank#readme
license:             MIT
license-file:        LICENSE
author:              Marcus Medom Ryding
maintainer:          mrok4a@gmail.com
copyright:           2016 Marcus Medom Ryding
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pagerank
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array
                     , base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , hmatrix
                     , parallel
                     , strict
                     , vector
                     , stm
  ghc-options: -O2 -Wall